Bug 481759 - After sending a file to Bluetooth device via Bluetooth applet, notification shows a clickable link that's always wrong
Summary: After sending a file to Bluetooth device via Bluetooth applet, notification s...
Status: RESOLVED FIXED
Alias: None
Product: Bluedevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.93.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-24 11:28 UTC by Patrick Silva
Modified: 2024-03-02 22:51 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.1
Sentry Crash Report:


Attachments
screenshot (172.70 KB, image/png)
2024-02-24 11:28 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2024-02-24 11:28:06 UTC
Created attachment 166058 [details]
screenshot

STEPS TO REPRODUCE
1. send a file to another device via Bluetooth applet in the system tray
2. 
3. 

OBSERVED RESULT
when sending is finished, Plasma shows a notification with a link. Click on this link results in the error message seen in the attached screenshot.

EXPECTED RESULT
no error message

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2024-02-26 21:03:52 UTC
Can confirm. The link is clearly wrong: "file:[device name]"
Comment 2 Bug Janitor Service 2024-02-26 21:11:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3975
Comment 3 Kai Uwe Broulik 2024-02-27 09:34:58 UTC
Git commit f807a2793bd91360324469c5e2f1b621a62be426 by Kai Uwe Broulik.
Committed on 27/02/2024 at 09:22.
Pushed by broulik into branch 'master'.

Notifications: Only convert absolute paths to file URLs

If the contents is just e.g. a device name, there's no point
in turning it into a URL.

M  +5    -0    libnotificationmanager/job_p.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f807a2793bd91360324469c5e2f1b621a62be426
Comment 4 Kai Uwe Broulik 2024-02-27 11:31:50 UTC
Git commit 403431b1b801326cbca732dbcc759a719c1bb7f0 by Kai Uwe Broulik.
Committed on 27/02/2024 at 11:19.
Pushed by broulik into branch 'Plasma/6.0'.

Notifications: Only convert absolute paths to file URLs

If the contents is just e.g. a device name, there's no point
in turning it into a URL.


(cherry picked from commit f807a2793bd91360324469c5e2f1b621a62be426)

M  +5    -0    libnotificationmanager/job_p.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/403431b1b801326cbca732dbcc759a719c1bb7f0