Notifications: Only convert absolute paths to file URLs

If the contents is just e.g. a device name, there's no point
in turning it into a URL.

BUG: 481759


(cherry picked from commit f807a2793bd91360324469c5e2f1b621a62be426)